@@ -31,7 +31,6 @@
 
 
 Todo in further future:
-# 14 give feedback about what we are doing
 # checking for sufficient diskspace
 # have an option to remove certain exclude patterns
 # colorize the output
