@@ -1,5 +1,9 @@
 check_perms_S()
 {
+# fix problems with german umlauts
+# if already set do nothing
+git config --global core.quotepath false || :
+	
 return_check=0
 echo "checking Permissions ..."	
 	
@@ -13,14 +17,14 @@ until [ $count == 0  ]
 		OWNU=$(echo $FILE|awk '{print $3}')
 		OWNG=$(echo $FILE|awk '{print $4}')
 		
-	#if a file is not present, skip test
+	# if a file is not present, skip test
 		if [ ! -e "$NAME" ]
 			then
 				count=$((count-=1))
 				continue
 		fi
 	
-	#cheking whether the Permissions have changed
+	# cheking whether the Permissions have changed
 		if [ "$(stat -c %a $NAME)" != "$PERMS"  ]
 			then	
 				echo -e '\E[31m permissions'; echo "of file $NAME has changed to $(stat -c %a $NAME)"
@@ -30,7 +34,7 @@ until [ $count == 0  ]
 				return_check=1
 		fi
 		
-	#checking whether the Owner or the Group has changed 
+	# checking whether the Owner or the Group has changed 
 		if [[ "$(stat -c %U $NAME)" != "$OWNU" || "$(stat -c %G $NAME)" != "$OWNG" ]]
 			then				
 				echo -e '\E[31m owner or group'; echo  "of $NAME has changed to $(stat -c "%U:%G" $NAME)"
@@ -44,6 +48,8 @@ until [ $count == 0  ]
 		unset FILE
 
 	done
+	echo -e '\E[32m done'
+	tput sgr0
 	return $return_check
 }
 
@@ -54,4 +60,6 @@ list_git()
 cd $BACKUPDIR 2> /dev/null || return 1
 git branch -a
 PAGER=cat git log
+echo -e '\E[32m done'
+tput sgr0
 }
